fix(treelist): Moved drop slots to tree-list-item to remove white space between rows
Also increased drop slot height from 2px to 5px.
Added showDropSlot attribute to tree-list.
Added index attribute to tree-list-item.

--- a/src/app/treelist/treelist-item.component.scss
+++ b/src/app/treelist/treelist-item.component.scss
@@ -2,10 +2,24 @@
 
 .tree-list {
   .list-group-item {
+    display: block;
     border: none;
     &:first-child {
       border: none;
     }
+    &.tree-item-placeholder {
+      padding-top: 5px;
+    }
+  }
+
+  .node-drop-slot {
+    height: 5px;
+  }
+
+  .node-drop-slot.is-dragging-over {
+    background-color: $color-pf-black-400;
+    border: none;
+    height: 60px;
   }
 }
 
@@ -26,7 +40,7 @@
   }
   &.is-dragging-over {
     .list-group-item {
-      background-color: $color-pf-black-400;
+      background-color: $color-pf-black-200;
     }
   }
 }
